<resources>
    <string name="app_name">FLOW</string>

    <!-- For default fragments (if they exist) -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
        eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
        voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
        clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
        amet.
    </string>

    <!-- Phase 5: Finance -->
    <string name="biometric_title">Biometric login for Finances</string>
    <string name="biometric_subtitle">Log in using your biometric credential or screen lock</string>
    <string name="monthly_spending_label">Monthly Spending: %s</string>

    <!-- Phase 6: Notes -->
    <string name="speech_to_text_desc">Speak to add text</string>
    <string name="lock_note">Lock note</string>
    <string name="unlock_note">Unlock note</string>
    <string name="delete_note">Delete note</string>
    <string name="save_note">Save</string>
    <string name="note_title_hint">Title</string>
    <string name="note_content_hint">Start writing…</string>
    <string name="set_password_title">Set Note Password</string>
    <string name="confirm_password_title">Confirm Password</string>
    <string name="unlock_note_title">Enter Password to Unlock</string>
    <string name="password_hint">Password</string>
    <string name="confirm">Confirm</string>
    <string name="password_empty">Password cannot be empty</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="password_set">Password set. Note will be locked on save.</string>
    <string name="password_removed">Password removed. Note will be unlocked on save.</string>
    <string name="incorrect_password">Incorrect password</string>

    <!-- Phase 7: Settings -->
    <string name="settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="logout_confirm_message">Are you sure you want to log out?</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_confirm_message">
        Are you sure you want to delete your account? This is permanent and all your cloud data will be lost.
    </string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="account_deleted_toast">Account deleted successfully</string>
</resources>