<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textAppearance="?attr/textAppearanceHeadlineMedium"
        android:layout_marginBottom="32dp" />

    <TextView
        android:id="@+id/text_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        android:layout_marginBottom="32dp"
        tools:text="Logged in as: user@example.com" />

	<com.google.android.material.button.MaterialButton
		android:id="@+id/button_theme"
		style="?attr/materialButtonOutlinedStyle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="Theme: System/Light/Dark"
		android:layout_marginBottom="16dp" />

	<com.google.android.material.button.MaterialButton
        android:id="@+id/button_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout" />

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

	<com.google.android.material.button.MaterialButton
        android:id="@+id/button_delete_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_delete_background"
        android:text="@string/delete_account"
        android:textColor="@android:color/white"
        android:layout_marginBottom="32dp"/>

</LinearLayout>